# nodify-clients

./: .gitignore  CONTRIBUTING.md  README.md  composer.json  p7xkabenfx  packages.json  pom.xml  verification-key.txt
examples/: NodifyReactiveExample.java  complete_scenario.php  complete_scenario.py  nodify-tests.ts
examples/nodify-java-example/: README.md  pom.xml
examples/nodify-node-examples/: README.md  package.json
examples/nodify-node-examples/src/: landing-page-example.ts
examples/nodify-php-example/: README.md  composer.json  ecommerce_example.php
examples/nodify-python-example/news_feed_example/: README.md  news_feed_example.py  requirements.txt
java/: README.md  pom.xml  settings.xml
node/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
node/src/: nodify-client.ts
node/src/authentication/: index.ts
node/src/models/: nodify-models.ts
nodify-java-client/: pom.xml
nodify-java-client/resources/: application.yaml
nodify-java-client/src/main/: JclientApplication.java
nodify-java-client/src/main/java/: Main.java
nodify-node-client/: package-lock.json  package.json
nodify-node-client/src/: nodify-client.ts  nodify-tests.ts
nodify-node-client/src/authentication/: nodify-authentication.ts
php/: .gitignore  README.md  composer.json
php/src/Nodify/: Client.php  Config.php  Enums.php  Models.php
php/src/examples/: complete_scenario.php
python/: .gitignore  README.md  pyproject.toml
python/src/nodify_client/: __init__.py  client.py  config.py  enums.py  exceptions.py  init.py  models.py
(+225 files in other folders)
