[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodify-python-client"
version = "1.0.0"
description = "Official Python client for Nodify Headless CMS"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AZIRARM", email = "azirarm@gmail.com"}
]
keywords = ["nodify", "cms", "headless", "api-client", "reactive"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/AZIRARM/nodify-clients/tree/main/python"
Repository = "https://github.com/AZIRARM/nodify-clients.git"
Documentation = "https://github.com/AZIRARM/nodify-clients#readme"
Issues = "https://github.com/AZIRARM/nodify-clients/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nodify_client*"]